--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -164,3 +164,9 @@
 .cta-button:hover {
     background: var(--primary-blue);
 }
+
+.cta-button a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
