--- a/src/styles/BlogCard.css
+++ b/src/styles/BlogCard.css
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0;
+    padding: 30px;
     width: 100%;
 }
 
@@ -25,7 +25,7 @@
     background-color: var(--light-blue);
     border-radius: 10px;
     margin: 15px;
-    width: 80%;
+    width: 100%;
 }
 
 .post-detail{
@@ -45,7 +45,7 @@
     background-color: #003366;
     color: white;
     padding: 5px;
-    width: 10%;
+    width: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -94,5 +94,4 @@
 .link-post-label:active {
     background-color: var(--hover-blue);
     color: white;
-    transform: scale(0.98);
 }
