--- a/src/styles/BlogCard.css
+++ b/src/styles/BlogCard.css
@@ -15,7 +15,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px;
+    padding-left: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     width: 100%;
 }
 
@@ -24,7 +26,7 @@
     border: 2px solid var(--primary-blue);
     background-color: var(--light-blue);
     border-radius: 10px;
-    margin: 15px;
+    margin: 10px;
     width: 100%;
 }
 
@@ -45,7 +47,7 @@
     background-color: #003366;
     color: white;
     padding: 5px;
-    width: 20%;
+    width: 30%;
     display: flex;
     align-items: center;
     justify-content: center;
